--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -28,5 +27,9 @@ body {
 }
 
 *{
-  /* font-family: 'Poppins'; */
+  font-family: 'Poppins';
+}
+
+i {
+  font-family: 'Font Awesome 6 Free';
 }
