--- a/components/navbar/navbar.scss
+++ b/components/navbar/navbar.scss
@@ -1,3 +1,13 @@
 .nav-container {
     background: #4ade80bf;
 }
+
+
+.shake {
+    animation: shake 2s ease-in-out infinite;
+  }
+@keyframes shake {
+    0%, 100% {transform: translateX(0);}
+    10%, 30%, 50%, 70%, 90% {transform: translateX(-5px);}
+    20%, 40%, 60%, 80% {transform: translateX(5px);}
+}
